# mini-kms

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.release  README.md  docker-compose.test.yml  mini_kms.py  openapi.json  pyproject.toml
.github/workflows/: publish.yml
scripts/: retrieve_openapi.sh
tests/: Dockerfile.test  conftest.py  requirements.test.txt
tests/integration/: test_api.py
