[tool.poetry]
name = "mini-kms"
version = "0.1.2"
description = "A mini KMS"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aries-askar = "^0.3.1"
fastapi = "^0.111.0"
pydantic = "^2.7.2"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
base58 = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
]
per-file-ignores = {"**/{tests}/*" = ["F841", "D", "E501"]}

[tool.ruff.format]
docstring-code-format = true
